--- a/report-service/src/main/resources/web/template/page.hbs
+++ b/report-service/src/main/resources/web/template/page.hbs
@@ -1,9 +1,16 @@
 <!doctype html> 
 <html lang="en"> 
     <head> 
-        <meta charset="utf-8"> 
-        <title>Overops Report</title>
+        <meta charset="utf-8">
+        {{#if standalone}}
+            <link rel="shortcut icon" type="image/png" sizes="48x48" href="/overops-favicon-48x48.png">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
+        {{/if}}
+        <title>OverOps Quality Report</title>
         <style>
+            {{#if standalone}}
+                {{> standaloneStyle}}
+            {{/if}}
             {{> style}}
         </style>
     </head> 
