[OOE-364] Added additional location information so lines to not look redundant (also fixed bugs from PRD-1643)

--- a/report-service/src/main/resources/web/template/report.hbs
+++ b/report-service/src/main/resources/web/template/report.hbs
@@ -78,6 +78,7 @@
                     <tr>
                         <td>
                             <a href="{{this.arcLink}}" target="_blank">{{this.eventSummary}}</a>
+                            <p class="event-location">{{this.location}}</p>
                         </td>
                         <td>{{this.applications}}</td>
                         <td>{{this.introducedBy}}</td>
@@ -118,6 +119,7 @@
                     <tr>
                         <td>
                             <a href="{{this.arcLink}}" target="_blank">{{this.eventSummary}}</a>
+                            <p class="event-location">{{this.location}}</p>
                         </td>
                         <td>{{this.applications}}</td>
                         <td>{{this.introducedBy}}</td>
@@ -160,6 +162,7 @@
                     <tr>
                         <td>
                             <a href="{{this.arcLink}}" target="_blank">{{eventSummary}}</a>
+                            <p class="event-location">{{this.location}}</p>
                         </td>
                         <td>{{this.applications}}</td>
                         <td>{{this.introducedBy}}</td>
