--- a/report-service/src/main/resources/web/template/reportSection.hbs
+++ b/report-service/src/main/resources/web/template/reportSection.hbs
@@ -23,6 +23,7 @@
             <tr>
                 <td>
                     <a href="{{this.arcLink}}" target="_blank">{{eventSummary}}</a>
+                    <p class="event-location">{{this.location}}</p>
                 </td>
                 <td>{{this.applications}}</td>
                 <td>{{this.introducedBy}}</td>
