--- a/report-service/src/main/resources/web/template/style.hbs
+++ b/report-service/src/main/resources/web/template/style.hbs
@@ -140,3 +140,9 @@ width: 20px;
 height: 20px;
 margin: -5px 5px -5px -10px;
 }
+
+.overops-quality-report .event-location {
+  color: hsl(0, 0%, 60%);
+  padding-left: 10px;
+  margin: 0px;
+}
